--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <div class="loader__peges" id="loader">
+      <img src="./images/loading.gif">
+  </div>
     <nav w3-include-html="navbar.html"></nav>
+    <!-- ------------------------------------------------------ -->
     <section class="main">
       <div class="container-xl container-xl-fluid">
         <div class="main__content">
-          <!-- ----------------------------------------------- -->
           <div class="main__user__box">
             <div class="main__user__title">
               <p>
@@ -480,6 +483,7 @@
     <script src="./js/Counter.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="./js/loader.js"></script>
     <script>
      $('.owl-carousel').owlCarousel({
     loop:false,
